5.11.3 Fix comment background in dark mode

--- a/css/theme/dark.scss
+++ b/css/theme/dark.scss
@@ -84,6 +84,10 @@ $link-ternary-hover: #f66e94;
         background-color: $secondary-translucent;
     }
 
+    .comment {
+        background-color: transparent;
+    }
+
     .comment .comment {
         background-color: transparent;
     }
